--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p> Estou ampliando cada vez mais o meu portfólio com trabalhos de negócios variados e tenho me dedicado
                 muito nos meus projetos. Essa carreira é minha descoberta de talento e trabalho com muita
                 responsabilidade e felicidade em cada colaboração com o negócio dos meus clientes. </p>
-            <button>Entre em contato</button>
+             <a href="https://wa.me/5551995738976?text=J%C3%BAlia+Thereza+%2F+Desenvolvedora+Front+End+" target="_blank"> <button> Entre em contato</button></a>
         </div>
 
     </section>
