--- a/index.html
+++ b/index.html
@@ -56,31 +56,21 @@
             <div class="card">
                 <img src="./src/img/one-piece.png">
                 <h5>One Piece Book</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eum id optio distinctio qui aperiam
-                    amet
-                    odio, consectetur illo saepe quaerat, maxime dolor reprehenderit quo officia eveniet perspiciatis
-                    veniam
-                    ab.</p>
+                <p> Site livro sobre os personagens do anime "One Piece". Descritivo sobre a história e tragetória dos personagens icônicos de um grande anime com uma história extensa.
+                    </p>
                 <a href="https://ajuliathereza.github.io/onepiecebook/" target="_blank">Ver Projeto</a>
             </div>
             <div class="card">
                 <img src="./src/img/dindin.png">
                 <h5>Dindin</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eum id optio distinctio qui aperiam
-                    amet
-                    odio, consectetur illo saepe quaerat, maxime dolor reprehenderit quo officia eveniet perspiciatis
-                    veniam
-                    ab.</p>
+                <p>Projeto no qual eu fiz para um processo seletivo do Banco BV no qual eu passei para ingressar no banco. Esse site é um projeto sobre cursos de educação financeira, para ajudar pessoas a cuidar dos seus bens e lidar e cuidar melhor do seu dinheiro.
+                    </p>
                 <a href="https://ajuliathereza.github.io/ProjetoBancoBV/" target="_blank">Ver Projeto</a>
             </div>
             <div class="card">
                 <img src="./src/img/arroba.png">
                 <h5>Arroba</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eum id optio distinctio qui aperiam
-                    amet
-                    odio, consectetur illo saepe quaerat, maxime dolor reprehenderit quo officia eveniet perspiciatis
-                    veniam
-                    ab.</p>
+                <p>LEsse projeto ainda está em desenvolvimento, e será um blog sobre tecnologia voltada ao Front End</p>
                 <a>Ver Projeto</a>
             </div>
         </div>
