--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="card">
                 <img src="./src/img/dindin.png">
                 <h5>Dindin</h5>
-                <p>Projeto no qual eu fiz para um processo seletivo do Banco BV no qual eu passei para ingressar no banco. Esse site é um projeto sobre cursos de educação financeira, para ajudar pessoas a cuidar dos seus bens e lidar e cuidar melhor do seu dinheiro.
+                <p>Projeto no qual eu fiz para um processo seletivo do Banco BV no qual eu passei para ingressar no banco. Sobre cursos de educação financeira para ajudar pessoas a cuidar dos seus bens.
                     </p>
                 <a href="https://ajuliathereza.github.io/ProjetoBancoBV/" target="_blank">Ver Projeto</a>
             </div>
