correção detalhe texto

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="card">
                 <img src="./src/img/arroba.png">
                 <h5>Arroba</h5>
-                <p>LEsse projeto ainda está em desenvolvimento, e será um blog sobre tecnologia voltada ao Front End</p>
+                <p>Esse projeto ainda está em desenvolvimento, e será um blog sobre tecnologia voltada ao Front End</p>
                 <a>Ver Projeto</a>
             </div>
         </div>
