the-witcher commit

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                 <a href="https://ajuliathereza.github.io/ProjetoBancoBV/" target="_blank">Ver Projeto</a>
             </div>
             <div class="card">
-                <img src="./src/img/arroba.png">
-                <h5>Arroba</h5>
-                <p>Esse projeto ainda está em desenvolvimento, e será um blog sobre tecnologia voltada ao Front End.</p>
-                <a>Ver Projeto</a>
+                <img src="./src/img/witcher.png">
+                <h5>The Witcher Fan Page</h5>
+                <p>Esse projeto foi criado por conta da minha paixão e hobbie de jogar ler e conhecer esse universo fictício de RPG aventura. </p>
+                <a href="https://ajuliathereza.github.io/the-witcher-fan/" target="_blank">Ver Projeto</a>
             </div>
         </div>
     </div>
